--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
 - go get golang.org/x/oauth2
 - go get golang.org/x/oauth2/github
 - go get github.com/google/go-github/github
+- go get gopkg.in/yaml.v2
 
 script:
 - go build -o afy -v -a
